Video Width Overflow fix , Made Connected Users Component Scrollable

--- a/src/WhiteboardStyles/ConnectedUsersStyles.module.css
+++ b/src/WhiteboardStyles/ConnectedUsersStyles.module.css
@@ -10,6 +10,7 @@
 	margin-left: 20px;
 	padding: 10px;
 	border-radius: 20px;
-	height: 60%;
+	height: 55vh;
 	position: relative;
+	overflow-x: hidden;
 }
